# libp2p-scatter

./: CHANGELOG.md  Cargo.toml  README.md  codecov.yml
.github/workflows/: rust.yml
examples/: example.rs
src/: behaviour.rs  codec.rs  handler.rs  length_prefixed.rs  lib.rs  metrics.rs  protocol.rs  util.rs
tests/: broadcast.rs  connectivity.rs  edge_cases.rs  integration.rs  lifecycle.rs  network.rs  topology.rs
tests/common/: mod.rs
tests/it/: broadcast.rs  connectivity.rs  edge_cases.rs  lifecycle.rs  mod.rs  network.rs  topology.rs
