[package]
name = "libp2p-scatter"
version = "0.3.0"
authors = ["David Craven <david@craven.ch>", "Actyx AG", "Romain Ruetschi <github@romac.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "broadcast messages to connected peers"
repository = "https://github.com/romac/libp2p-scatter"

[dependencies]
bytes = "1"
fnv = "1"
futures = "0.3"
libp2p = "0.56"
unsigned-varint = "0.8"
prometheus-client = "0.23.1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libp2p = { version = "0.56", features = ["tcp", "noise", "yamux", "tokio"] }
test-log = { version = "0.2.19", default-features = false, features = ["color", "trace"] }
